--- a/pref.ini
+++ b/pref.ini
@@ -1,18 +1,18 @@
 box1s = 1
-box2s = 1
+box2s = 0
 box3s = 0
 box4s = 1
-box5s = 1
+box5s = 0
 box6s = 0
 box7s = 0
-box8s = 1
-box9s = 1
-
-
-
-
-
-
-
-
-
+box8s = 0
+box9s = 0
+http://www.google.com
+Empty
+Empty
+Empty
+Empty
+Empty
+Empty
+Empty
+Empty
